--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "jedevc-personal-site",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "My personal website",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
@@ -29,9 +29,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/jedevc/jedevc.github.io"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/jedevc/jedevc.github.io/issues"
   }
 }
