--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "gatsby": "^2.21.37",
     "gatsby-plugin-react-helmet": "^3.3.2",
     "gatsby-plugin-sass": "^2.3.2",
+    "gatsby-plugin-sharp": "^2.6.9",
+    "gatsby-remark-copy-linked-files": "^2.3.3",
+    "gatsby-remark-images": "^3.3.8",
     "gatsby-source-filesystem": "^2.3.8",
     "gatsby-transformer-remark": "^2.8.13",
     "node-sass": "^4.14.1",
