--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "gatsby-plugin-sharp": "^2.6.9",
     "gatsby-remark-copy-linked-files": "^2.3.3",
     "gatsby-remark-images": "^3.3.8",
+    "gatsby-remark-prismjs": "^3.5.2",
     "gatsby-source-filesystem": "^2.3.8",
     "gatsby-transformer-remark": "^2.8.13",
     "node-sass": "^4.14.1",
+    "prism-themes": "^1.4.0",
+    "prismjs": "^1.20.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
