--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jedevc-personal-site",
+  "name": "jedevc-personal-website",
   "private": true,
   "description": "My personal website",
   "version": "0.1.0",
@@ -37,9 +37,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jedevc/jedevc.github.io"
+    "url": "https://github.com/jedevc/website"
   },
   "bugs": {
-    "url": "https://github.com/jedevc/jedevc.github.io/issues"
+    "url": "https://github.com/jedevc/website/issues"
   }
 }
