--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-remark-prismjs": "^3.5.2",
     "gatsby-source-filesystem": "^2.3.8",
     "gatsby-transformer-remark": "^2.8.13",
+    "gatsby-transformer-yaml": "^2.4.2",
     "node-sass": "^4.14.1",
     "prism-themes": "^1.4.0",
     "prismjs": "^1.20.0",
