--- a/package.json
+++ b/package.json
@@ -16,16 +16,18 @@
   "dependencies": {
     "bulma": "^0.8.2",
     "gatsby": "^2.21.37",
+    "gatsby-image": "^2.4.6",
     "gatsby-plugin-catch-links": "^2.3.4",
     "gatsby-plugin-netlify": "^2.3.3",
     "gatsby-plugin-react-helmet": "^3.3.2",
     "gatsby-plugin-sass": "^2.3.2",
-    "gatsby-plugin-sharp": "^2.6.9",
+    "gatsby-plugin-sharp": "^2.6.10",
     "gatsby-remark-copy-linked-files": "^2.3.3",
     "gatsby-remark-images": "^3.3.8",
     "gatsby-remark-prismjs": "^3.5.2",
     "gatsby-source-filesystem": "^2.3.8",
     "gatsby-transformer-remark": "^2.8.13",
+    "gatsby-transformer-sharp": "^2.5.4",
     "gatsby-transformer-yaml": "^2.4.2",
     "node-sass": "^4.14.1",
     "prism-themes": "^1.4.0",
