--- a/data/nav.yml
+++ b/data/nav.yml
@@ -2,6 +2,8 @@
   link: "/"
 - name: "Blog"
   link: "/blog"
+- name: "Portfolio"
+  link: "/portfolio"
 - name: "CV"
   link: "https://cv.jedevc.com"
 - name: "About"
