--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "bulma": "^0.8.2",
+    "bulma": "^0.9.0",
     "gatsby": "^2.21.37",
+    "gatsby-cli": "^2.12.45",
     "gatsby-image": "^2.4.6",
     "gatsby-plugin-catch-links": "^2.3.4",
     "gatsby-plugin-netlify": "^2.3.3",
