Fix trailing slash consistency issues

--- a/data/nav.yml
+++ b/data/nav.yml
@@ -1,10 +1,10 @@
 - name: "Home"
   link: "/"
 - name: "Blog"
-  link: "/blog"
+  link: "/blog/"
 - name: "Portfolio"
-  link: "/portfolio"
+  link: "/portfolio/"
 - name: "CV"
   link: "https://cv.jedevc.com"
 - name: "About"
-  link: "/about"
+  link: "/about/"
