--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-cli": "^2.12.45",
     "gatsby-image": "^2.4.6",
     "gatsby-plugin-catch-links": "^2.3.4",
+    "gatsby-plugin-mdx": "^1.2.15",
     "gatsby-plugin-netlify": "^2.3.3",
     "gatsby-plugin-react-helmet": "^3.3.2",
     "gatsby-plugin-sass": "^2.3.2",
@@ -28,7 +29,6 @@
     "gatsby-remark-images": "^3.3.8",
     "gatsby-remark-prismjs": "^3.5.2",
     "gatsby-source-filesystem": "^2.3.8",
-    "gatsby-transformer-remark": "^2.8.13",
     "gatsby-transformer-sharp": "^2.5.4",
     "gatsby-transformer-yaml": "^2.4.2",
     "node-sass": "^4.14.1",
