--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@mdx-js/react": "^1.6.5",
     "bulma": "^0.9.0",
     "gatsby": "^2.21.37",
     "gatsby-cli": "^2.12.45",
