Fancily embed the youtube video

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-plugin-sharp": "^2.6.10",
     "gatsby-plugin-sitemap": "^2.4.4",
     "gatsby-remark-copy-linked-files": "^2.3.3",
+    "gatsby-remark-embedder": "^2.1.1",
     "gatsby-remark-images": "^3.3.8",
     "gatsby-remark-prismjs": "^3.5.2",
     "gatsby-source-filesystem": "^2.3.8",
