--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-cli": "^2.12.45",
     "gatsby-image": "^2.4.6",
     "gatsby-plugin-catch-links": "^2.3.4",
+    "gatsby-plugin-feed": "^2.5.7",
     "gatsby-plugin-mdx": "^1.2.15",
     "gatsby-plugin-netlify": "^2.3.3",
     "gatsby-plugin-react-helmet": "^3.3.2",
