--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-image": "^2.4.6",
     "gatsby-plugin-catch-links": "^2.3.4",
     "gatsby-plugin-feed": "^2.5.7",
+    "gatsby-plugin-layout": "^1.3.6",
     "gatsby-plugin-mdx": "^1.2.15",
     "gatsby-plugin-netlify": "^2.3.3",
     "gatsby-plugin-react-helmet": "^3.3.2",
@@ -40,7 +41,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
-    "react-icons": "^3.10.0"
+    "react-icons": "^3.10.0",
+    "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
     "prettier": "2.0.5"
