--- a/package.json
+++ b/package.json
@@ -14,38 +14,40 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@mdx-js/react": "^1.6.5",
-    "bulma": "^0.9.0",
-    "gatsby": "^2.21.37",
-    "gatsby-cli": "^2.12.45",
-    "gatsby-image": "^2.4.6",
-    "gatsby-plugin-catch-links": "^2.3.4",
-    "gatsby-plugin-feed": "^2.5.7",
-    "gatsby-plugin-layout": "^1.3.6",
-    "gatsby-plugin-mdx": "^1.2.15",
-    "gatsby-plugin-netlify": "^2.3.3",
-    "gatsby-plugin-react-helmet": "^3.3.2",
-    "gatsby-plugin-sass": "^2.3.2",
-    "gatsby-plugin-sharp": "^2.6.10",
-    "gatsby-plugin-sitemap": "^2.4.4",
-    "gatsby-remark-copy-linked-files": "^2.3.3",
-    "gatsby-remark-embedder": "^2.1.1",
-    "gatsby-remark-images": "^3.3.8",
-    "gatsby-remark-prismjs": "^3.5.2",
-    "gatsby-source-filesystem": "^2.3.8",
-    "gatsby-transformer-sharp": "^2.5.4",
-    "gatsby-transformer-yaml": "^2.4.2",
-    "node-sass": "^4.14.1",
-    "prism-themes": "^1.4.0",
-    "prismjs": "^1.20.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "bulma": "^0.9.2",
+    "gatsby": "^3.6.2",
+    "gatsby-cli": "^3.6.0",
+    "gatsby-image": "^3.6.0",
+    "gatsby-plugin-catch-links": "^3.6.0",
+    "gatsby-plugin-feed": "^3.6.0",
+    "gatsby-plugin-image": "^1.6.0",
+    "gatsby-plugin-layout": "^2.6.0",
+    "gatsby-plugin-mdx": "^2.6.0",
+    "gatsby-plugin-netlify": "^3.6.1",
+    "gatsby-plugin-react-helmet": "^4.6.0",
+    "gatsby-plugin-sass": "^4.6.0",
+    "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-plugin-sitemap": "^4.2.0",
+    "gatsby-remark-copy-linked-files": "^4.3.0",
+    "gatsby-remark-embedder": "^5.0.0",
+    "gatsby-remark-images": "^5.3.0",
+    "gatsby-remark-prismjs": "^5.3.0",
+    "gatsby-source-filesystem": "^3.6.0",
+    "gatsby-transformer-sharp": "^3.6.0",
+    "gatsby-transformer-yaml": "^3.6.0",
+    "node-sass": "^6.0.0",
+    "prism-themes": "^1.7.0",
+    "prismjs": "^1.23.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.0.0",
-    "react-icons": "^3.10.0",
-    "react-transition-group": "^4.4.1"
+    "react-icons": "^4.2.0",
+    "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "prettier": "2.3.1"
   },
   "repository": {
     "type": "git",
