--- a/package.json
+++ b/package.json
@@ -17,37 +17,37 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "bulma": "^0.9.2",
-    "gatsby": "^3.6.2",
-    "gatsby-cli": "^3.6.0",
-    "gatsby-image": "^3.6.0",
-    "gatsby-plugin-catch-links": "^3.6.0",
-    "gatsby-plugin-feed": "^3.6.0",
-    "gatsby-plugin-image": "^1.6.0",
-    "gatsby-plugin-layout": "^2.6.0",
-    "gatsby-plugin-mdx": "^2.6.0",
-    "gatsby-plugin-netlify": "^3.6.1",
-    "gatsby-plugin-react-helmet": "^4.6.0",
-    "gatsby-plugin-sass": "^4.6.0",
-    "gatsby-plugin-sharp": "^3.6.0",
-    "gatsby-plugin-sitemap": "^4.2.0",
-    "gatsby-remark-copy-linked-files": "^4.3.0",
+    "gatsby": "^4.5.2",
+    "gatsby-cli": "^4.5.1",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-catch-links": "^4.5.0",
+    "gatsby-plugin-feed": "^4.5.0",
+    "gatsby-plugin-image": "^2.5.1",
+    "gatsby-plugin-layout": "^3.5.0",
+    "gatsby-plugin-mdx": "^3.5.1",
+    "gatsby-plugin-netlify": "^3.14.0",
+    "gatsby-plugin-react-helmet": "^5.5.0",
+    "gatsby-plugin-sass": "^5.5.0",
+    "gatsby-plugin-sharp": "^4.5.1",
+    "gatsby-plugin-sitemap": "^5.5.0",
+    "gatsby-remark-copy-linked-files": "^5.5.0",
     "gatsby-remark-embedder": "^5.0.0",
-    "gatsby-remark-images": "^5.3.0",
-    "gatsby-remark-prismjs": "^5.3.0",
-    "gatsby-source-filesystem": "^3.6.0",
-    "gatsby-transformer-sharp": "^3.6.0",
-    "gatsby-transformer-yaml": "^3.6.0",
-    "node-sass": "^6.0.0",
-    "prism-themes": "^1.7.0",
-    "prismjs": "^1.23.0",
+    "gatsby-remark-images": "^6.5.1",
+    "gatsby-remark-prismjs": "^6.5.0",
+    "gatsby-source-filesystem": "^4.5.1",
+    "gatsby-transformer-sharp": "^4.5.0",
+    "gatsby-transformer-yaml": "^4.5.0",
+    "prism-themes": "^1.9.0",
+    "prismjs": "^1.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.0.0",
-    "react-icons": "^4.2.0",
+    "react-icons": "^4.3.1",
     "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
-    "prettier": "2.3.1"
+    "prettier": "2.5.1",
+    "sass": "^1.48.0"
   },
   "repository": {
     "type": "git",
