--- a/package.json
+++ b/package.json
@@ -6,19 +6,18 @@
   "license": "MIT",
   "scripts": {
     "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build",
+    "serve": "gatsby serve",
+    "start": "yarn develop",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,css,scss,md}\"",
-    "start": "yarn develop",
-    "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "bulma": "^0.9.2",
     "gatsby": "^4.5.2",
-    "gatsby-cli": "^4.5.1",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-catch-links": "^4.5.0",
     "gatsby-plugin-feed": "^4.5.0",
@@ -46,6 +45,8 @@
     "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
+    "gatsby-cli": "^4.5.1",
+    "patch-package": "^6.4.7",
     "prettier": "2.5.1",
     "sass": "^1.48.0"
   },
